Fixed footer alignment

--- a/user/themes/bodigiti/style/scss/components/nap/_local-info-nap--block.scss
+++ b/user/themes/bodigiti/style/scss/components/nap/_local-info-nap--block.scss
@@ -33,3 +33,10 @@
     margin: 1.5rem 0 0 0;
   }
 }
+
+
+#local-info-nap-etc * {
+  @include breakpoint($size-md, true) {
+    text-align: left !important;
+  }
+}
