--- a/user/themes/bodigiti/style/scss/components/region/_region--footer.scss
+++ b/user/themes/bodigiti/style/scss/components/region/_region--footer.scss
@@ -11,7 +11,7 @@
   * {
     text-align: center;
     @include breakpoint($size-sm, true) {
-      text-align: left;
+      // text-align: left;
     }
   }
 }
